Enable aero effect by inline manifest. Be able to execute installer and enum windows on VD.

--- a/SilentInstaller/SilentInstaller/SilentInstaller.vcxproj
+++ b/SilentInstaller/SilentInstaller/SilentInstaller.vcxproj
@@ -57,6 +57,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <UACExecutionLevel>AsInvoker</UACExecutionLevel>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
