Change SendMessage of the function imitateLeftClick to PostMessage. Almost complete the whole installation process, except the sleep length between installation finish and login, the click for hiding the floating window failed, not albe to remove the virtual disk icon, maybe need to remove the task bar icon and may be still something else.

--- a/SilentInstaller/SilentInstaller/SilentInstaller.vcxproj
+++ b/SilentInstaller/SilentInstaller/SilentInstaller.vcxproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <ClInclude Include="BaiduYun.h" />
     <ClInclude Include="ConfirmPage.h" />
+    <ClInclude Include="FileUtils.h" />
     <ClInclude Include="FinishPage.h" />
     <ClInclude Include="Installer.h" />
     <ClInclude Include="WizardPage.h" />
@@ -122,6 +123,7 @@
   <ItemGroup>
     <ClCompile Include="BaiduYun.cpp" />
     <ClCompile Include="ConfirmPage.cpp" />
+    <ClCompile Include="FileUtils.cpp" />
     <ClCompile Include="FinishPage.cpp" />
     <ClCompile Include="Installer.cpp" />
     <ClCompile Include="WizardPage.cpp" />
