--- a/SilentInstaller/SilentInstaller/SilentInstaller.vcxproj.filters
+++ b/SilentInstaller/SilentInstaller/SilentInstaller.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="RegistryUtils.h">
       <Filter>Headers</Filter>
     </ClInclude>
+    <ClInclude Include="TaskbarTray.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SilentInstaller.cpp">
@@ -129,6 +132,9 @@
       <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="RegistryUtils.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="TaskbarTray.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
   </ItemGroup>
