--- a/SilentInstaller/SilentInstaller/SilentInstaller.vcxproj.filters
+++ b/SilentInstaller/SilentInstaller/SilentInstaller.vcxproj.filters
@@ -16,6 +16,9 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
+    <Filter Include="Utils">
+      <UniqueIdentifier>{bf6e573f-405a-42b2-a254-5095912c16fa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
@@ -75,14 +78,17 @@
     <ClInclude Include="WizardPage.h">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="FileUtils.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="RegistryUtils.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
     <ClInclude Include="TaskbarTray.h">
       <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="FileUtils.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="ProcessUtils.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="RegistryUtils.h">
+      <Filter>Utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -128,14 +134,17 @@
     <ClCompile Include="WizardPage.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
-    <ClCompile Include="FileUtils.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="RegistryUtils.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
     <ClCompile Include="TaskbarTray.cpp">
       <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="FileUtils.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="ProcessUtils.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="RegistryUtils.cpp">
+      <Filter>Utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
